--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,5 +1,6 @@
-<div class="logotop" xLayout="row" fxLayoutAlign="center start">
-  <img src="../../assets/onroadlogo.png" >
+<div class="logotop" xLayout="row" fxLayoutAlign="center stretch">
+  <img  src="../../assets/onroadlogo.png" >
+  <button style="font-size: 40px;" mat-raised-button="" color="primary" fxFlex>Call : 7758080</button>
 </div>
 
 
