Add package destination api ,commindies

--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -1,2 +1,8 @@
 
-<mat-card>Simple card</mat-card>
+<h1 style="font-size: 45px;"  >Call  7758080</h1>
+<div fxHide.xs style="width: 100%;; display: flex; flex-direction: column; background: green; justify-content: space-around; align-items: center">
+  <h1 class="animated one"> Changing registry</h1>
+  <h1 class="animated two">Issuing and renewing licence</h1>
+  <h1 class="animated three">Paying Annul feels </h1>
+</div>
+
