--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -1,36 +1,39 @@
-<div fxLayout="row"  fxLayoutAlign="center start" fxLayoutGap="10px;">
-  <a href="../../assets/onroadapplication.pdf" mat-raised-button="" fxFlex="" >Download Registration Form</a>
-
-</div>
-<div fxLayout="row"  fxLayoutAlign="center start">
-  <mat-tab-group style="background-color: #e93e31;color: white;" fxFlex="">
-    <mat-tab style="color: white;" label="Service Dhivehi">
-      <mat-list >
-      <mat-list-item class="lists"> އެއްގަމާއި ކަނޑުގެ ލައިސެން އާކޮށްދިނުން</mat-list-item>
-      <mat-divider></mat-divider>
-      <mat-list-item class="lists"> އެއްގަމު އުޅަނދު ފަހަރުގެ ރަޖިސްޓްރީ ބަދަލު ކޮށްދިނުން</mat-list-item>
-      <mat-divider></mat-divider>
-      <mat-list-item class="lists"> ސައިކަލް އަދި ކާރުގެ ލައިސެންސް ނަގައި ދިނުން</mat-list-item>
-      <mat-divider></mat-divider>
-      <mat-list-item class="lists"> ސައިކަލް އަދި ކާރުގެ ލައިސެންސް ނަގައި ދިނުން</mat-list-item>
-      <mat-divider></mat-divider>
-      <mat-list-item class="lists"> ވެހިކަލް ތަކުގެ އެނުވަލް ފީ ދަށްކައި ދިނުން</mat-list-item>
-      <mat-divider></mat-divider>
-      </mat-list>
-    </mat-tab>
-    <mat-tab style="color: white;"  label="Service English">
-      <mat-list >
-        <mat-list-item > Changing registry of land vehicles</mat-list-item>
-        <mat-divider></mat-divider>
-        <mat-list-item > Issuing license for car and cycle</mat-list-item>
-        <mat-divider></mat-divider>
-        <mat-list-item > Renewing license for land vehicles and sea vessels</mat-list-item>
-        <mat-divider></mat-divider>
-        <mat-list-item > Paying Annul feels and other feels of vehicles</mat-list-item>
-        <mat-divider></mat-divider>
-      </mat-list>
-    </mat-tab>
-  </mat-tab-group>
-</div>
-
-
+<mat-card class="contaier" fxLayout="row" fxLayout.sm="column" fxLayout.xs="column" fxFlex >
+  <div  fxFlex="5" fxHide.sm fxHide.xs></div>
+  <div style="background-color: #f5f5f5;" fxFlex="40">
+    <div fxLayout="column" fxFill fxLayoutAlign="center center" >
+      <app-post></app-post>
+    </div>
+  </div>
+  <div style="background-color: #eeeeee;" fxFlex="50">
+    <mat-tab-group  fxFlex >
+      <mat-tab style="color: white;" label="Service Dhivehi">
+        <mat-list >
+          <mat-list-item class="lists"> އެއްގަމާއި ކަނޑުގެ ލައިސެން އާކޮށްދިނުން</mat-list-item>
+          <mat-divider></mat-divider>
+          <mat-list-item class="lists"> އެއްގަމު އުޅަނދު ފަހަރުގެ ރަޖިސްޓްރީ ބަދަލު ކޮށްދިނުން</mat-list-item>
+          <mat-divider></mat-divider>
+          <mat-list-item class="lists"> ސައިކަލް އަދި ކާރުގެ ލައިސެންސް ނަގައި ދިނުން</mat-list-item>
+          <mat-divider></mat-divider>
+          <mat-list-item class="lists"> ސައިކަލް އަދި ކާރުގެ ލައިސެންސް ނަގައި ދިނުން</mat-list-item>
+          <mat-divider></mat-divider>
+          <mat-list-item class="lists"> ވެހިކަލް ތަކުގެ އެނުވަލް ފީ ދަށްކައި ދިނުން</mat-list-item>
+          <mat-divider></mat-divider>
+        </mat-list>
+      </mat-tab>
+      <mat-tab style="color: white;"  label="Service English">
+        <mat-list >
+          <mat-list-item > Changing registry of land vehicles</mat-list-item>
+          <mat-divider></mat-divider>
+          <mat-list-item > Issuing license for car and cycle</mat-list-item>
+          <mat-divider></mat-divider>
+          <mat-list-item > Renewing license for land vehicles and sea vessels</mat-list-item>
+          <mat-divider></mat-divider>
+          <mat-list-item > Paying Annul feels and other feels of vehicles</mat-list-item>
+          <mat-divider></mat-divider>
+        </mat-list>
+      </mat-tab>
+    </mat-tab-group>
+  </div>
+  <div fxFlex="5" fxHide.sm fxHide.xs></div>
+</mat-card>
