--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,6 +1,9 @@
 <div fxLayout="row" class="logotop" fxLayoutAlign="center start">
   <img src="../../assets/onroadlogo.png">
 </div>
+<div fxLayout="row">
+  <img fxFlex="" src="../../assets/newadd.png" width="400">
+</div>
 
 
 
