--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -2,7 +2,7 @@
   <img src="../../assets/onroadlogo.png">
 </div>
 <div fxLayout="row">
-  <img fxFlex="" src="../../assets/newadd.png" width="400">
+  <img fxFlex="" src="../../assets/add.png" width="400">
 </div>
 
 
